--- a/win.html
+++ b/win.html
@@ -358,6 +358,13 @@
           ></p>
           <p><i>Empfehlung:</i> Die Datei mit den Zeit&shy;strahl&shy;daten sollte mit der App verknüpft sein: <a href="#">Einstellungen öffnen</a>.</p>
         </div>
+        <div id="artikel-ressourcen">
+          <p
+            ><img src="img/win/button-yes.svg" width="30" height="30" alt=""
+            ><i>Ressourcendaten</i
+          ></p>
+          <p><i>Empfehlung:</i> Die Datei mit den Ressourcen&shy;daten sollte mit der App verknüpft sein: <a href="#">Einstellungen öffnen</a>.</p>
+        </div>
         <div id="artikel-branch">
           <p
             ><img src="img/win/button-yes.svg" width="30" height="30" alt=""><i>Branch <q>master</q></i
@@ -468,6 +475,14 @@
                 ><input type="text" value="" placeholder="Pfad zur data.json" id="prefs-zeitstrahl" readonly tabindex="-1"
                 ><a href="#" id="prefs-zeitstrahl-open" class="icon" title="Datei auswählen"><img src="img/win/open-file.svg" width="30" height="30" alt=""></a
                 ><a href="#" id="prefs-zeitstrahl-remove" class="icon" title="Datei entkoppeln"><img src="img/win/delete.svg" width="30" height="30" alt=""></a
+              ></p>
+              <h2>Ressourcendaten<a href="#einstellungen-datenRessourcen" id="prefs-help-data-ressourcen" class="icon"
+                ><img src="img/win/help.svg" width="24" height="24" alt=""
+              ></a></h2>
+              <p
+                ><input type="text" value="" placeholder="Pfad zur data.json" id="prefs-ressourcen" readonly tabindex="-1"
+                ><a href="#" id="prefs-ressourcen-open" class="icon" title="Datei auswählen"><img src="img/win/open-file.svg" width="30" height="30" alt=""></a
+                ><a href="#" id="prefs-ressourcen-remove" class="icon" title="Datei entkoppeln"><img src="img/win/delete.svg" width="30" height="30" alt=""></a
               ></p>
               <h2>ZDL-Repository<a href="#einstellungen-datenZDL" id="prefs-help-data-zdl" class="icon"
                 ><img src="img/win/help.svg" width="24" height="24" alt=""
