--- a/win.html
+++ b/win.html
@@ -318,6 +318,10 @@
             ><label for="filters-hints-tagging_semantics">Tagging: Semantik</label
           ></p>
           <p
+            ><input type="checkbox" id="filters-hints-quotations_error" checked
+            ><label for="filters-hints-quotations_error">Belege: Fehler</label
+          ></p>
+          <p
             ><input type="checkbox" id="filters-hints-general" checked
             ><label for="filters-hints-general">allgemeine Fehler</label
           ></p>
