[[feature]] neuer Hinweis: Revisionsdaten sollten nicht in der Zukunft liegen

--- a/html/help.html
+++ b/html/help.html
@@ -137,6 +137,7 @@
             ><a href="#hinweise-article_file"><i>Dateiname korrigieren</i></a
             >, <a href="#hinweise-article_id"><i>Artikel-ID korrigieren</i></a
             >, <a href="#hinweise-literature_missing"><i>Literaturtitel ergänzen</i></a
+            >, <a href="#hinweise-revision_future"><i>Revisionsdatum in der Zukunft</i></a
             ></li>
           <li><i>Kommentare</i><br
             ><a href="#hinweise-comment"><i>XML-Kommentare</i></a
@@ -882,6 +883,14 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
         <p class="tag"><i>Tag:</i><code>&lt;Literaturtitel&gt;</code></p>
 
         <p class="indent-hint">Der Literaturtitel wurde in der Datei <code>share/<wbr>Literaturliste.xml</code> nicht gefunden. Wurde der Titel unter der genannten ID bereits in die Literaturdatenbank von <i>Zettel’s Traum</i> übertragen, kann dieser Fehler getrost ignoriert werden.</p>
+
+      <p id="hinweise-revision_future" class="hint">Revisionsdatum in der Zukunft</p>
+
+        <p class="scope"><i>Skopus:</i><code>&lt;Artikel&gt;</code></p>
+
+        <p class="tag"><i>Tag:</i><code>&lt;Datum&gt;</code></p>
+
+        <p class="indent-hint">Das angegebene Revisionsdatum liegt in der Zukunft. Vor der Publikation des Artikels muss sichergestellt werden, dass das korrekte Publikationsdatum (also <abbr title="zum Beispiel">z.&nbsp;B.</abbr> das aktuelle Tagesdatum) eingetragen wird.</p>
 
       <h2><span>Kommentare</span></h2>
 
