--- a/html/help.html
+++ b/html/help.html
@@ -138,6 +138,7 @@
             >, <a href="#hinweise-article_id"><i>Artikel-ID korrigieren</i></a
             >, <a href="#hinweise-literature_missing"><i>Literaturtitel ergänzen</i></a
             >, <a href="#hinweise-revision_future"><i>Revisionsdatum in der Zukunft</i></a
+            >, <a href="#hinweise-revision_helterskelter"><i>Revision in falscher Reihenfolge</i></a
             ></li>
           <li><i>Kommentare</i><br
             ><a href="#hinweise-comment"><i>XML-Kommentare</i></a
@@ -891,6 +892,14 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
         <p class="tag"><i>Tag:</i><code>&lt;Datum&gt;</code></p>
 
         <p class="indent-hint">Das angegebene Revisionsdatum liegt in der Zukunft. Vor der Publikation des Artikels muss sichergestellt werden, dass das korrekte Publikationsdatum (also <abbr title="zum Beispiel">z.&nbsp;B.</abbr> das aktuelle Tagesdatum) eingetragen wird.</p>
+
+      <p id="hinweise-revision_helterskelter" class="hint">Revision in falscher Reihenfolge</p>
+
+        <p class="scope"><i>Skopus:</i><code>&lt;Artikel&gt;</code></p>
+
+        <p class="tag"><i>Tag:</i><code>&lt;Revision&gt;</code></p>
+
+        <p class="indent-hint">Das Datum der Revision bricht die chronologische Reihenfolge, weil das Datum der vorherigen Revision <em>hinter</em> dem Datum dieser Revision liegt. Die Reihenfolge der Revisionsnotizen muss also angepasst werden. Denkbar ist aber auch, dass ein einfacher Tippfehler vorliegt: Das Jahr im <code>&lt;Datum&gt;</code> der angegebenen Version könnte falsch sein.</p>
 
       <h2><span>Kommentare</span></h2>
 
