--- a/html/help.html
+++ b/html/help.html
@@ -132,6 +132,7 @@
           ></li>
           <li><i>Belege: Fehler</i><br
             ><a href="#hinweise-quotation_date"><i>Belegdatum korrigieren</i></a
+            >, <a href="#hinweise-quotation_helterskelter"><i>Beleg in falscher Reihenfolge</i></a
             >, <a href="#hinweise-quotation_referror"><i>Belegreferenz kein Beleg</i></a
             >, <a href="#hinweise-quotation_superfluous"><i>Beleg nicht zitiert</i></a
           ></li>
@@ -866,7 +867,27 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
         <p class="indent-hint">Die App durchsucht in jedem Beleg <code>&lt;unstrukturiert&gt;</code> auf ein genaues Tagesdatum. Dabei werden verschiedene Datumsformate erkannt: <q>03.05.2024</q>, <q>3.&nbsp;5. 2024</q>, <q>3.&nbsp;Mai 2024</q>. Wenn in der Quellenangabe ein Tagesdatum gefunden wird und wenn das Belegdatum in <code>&lt;Datum&gt;</code> vom Datum in der Quellenangabe abweicht, wird dieser Hinweis ausgeworfen.</p>
 
-        <p class="indent-hint">Ist der Hinweis korrekt, sollte das Datum in jedem Fall korrigiert werden. Denn nur, wenn in <code>&lt;Datum&gt;</code> das exakte Tagesdatum steht, kann eine korrekte, chronologische Sortierung der Belegauswahl sichergestellt werden.</p>
+        <p class="indent-hint">Ist der Hinweis korrekt, sollte das Datum in jedem Fall korrigiert werden. Denn nur, wenn in <code>&lt;Datum&gt;</code> das exakte Tagesdatum steht, kann eine <a href="#hinweise-quotation_helterskelter">korrekte, chronologische Sortierung der Belegauswahl</a> sichergestellt werden.</p>
+
+      <p id="hinweise-quotation_helterskelter" class="hint">Beleg in falscher Reihenfolge</p>
+
+        <p class="scope"><i>Skopus:</i><code>&lt;Belegreihe&gt;</code></p>
+
+        <p class="tag"><i>Tag:</i><code>&lt;Beleg&gt;</code></p>
+
+        <p class="indent-hint">Die Belegauswahl sollte strikt chronologisch sortiert sein. Taucht dieser Hinweis auf, bricht der angegebene Beleg die Chronologie, weil er zeitlich vor dem vorhergehenden Beleg entstanden <abbr title="beziehungsweise">bzw.</abbr> publiziert worden ist. Dieser Hinweis ist immer ein harter Fehler: Wenn er auftaucht, stimmt die Chronologie der Belegauswahl definitiv nicht.</p>
+
+        <p class="indent-hint">Der Algorithmus hat diese Sortierprinzipien:</p>
+
+        <ul class="indent-hint">
+          <li>Belege mit demselben Datum dürfen in beliebiger Reihenfolge stehen.</li>
+
+          <li><i>Belegdatum = Jahr:</i> Diese Belege werden so behandelt, als ob sie vom 1.&nbsp;Januar stammen. Auf diese Weise stehen Belege ohne Tagesdatum immer vor Belegen mit Tagesdatum. (Es sei denn, es gibt einen Beleg mit Tagesdatum 1.&nbsp;Januar. In diesem Fall muss man wachsam sein, weil die App keinen Sortierfehler meldet.)</li>
+
+          <li><i>Belegdatum = Jahrhundert:</i> Diese Belege werden so behandelt, als ob sie am 1.&nbsp;Januar des ersten Jahres des angegebenen Jahrhunderts entstanden wären. Die Angabe <code>&lt;Datum&gt;15&lt;/Datum&gt;</code> wird also behandelt wie zu <code>&lt;Datum&gt;01.01.1401&lt;/Datum&gt;</code></li>
+
+          <li><i>Belegdatum = Zeitraum:</i> Es gibt verschiedene Möglichkeiten, einen Entstehungszeitraum anzugeben: <code>&lt;Datum&gt;2010-2020&lt;/Datum&gt;</code> (Entstehungsdatum zwischen 2010 und 2020) und <code>&lt;Datum&gt;2023/24&lt;/Datum&gt;</code> (Entstehungsdatum zwischen 2023 und 2024). Bei diesen Belegen wird immer das zuerst genannte Jahr und in diesem der 1.&nbsp;Januar als Sortierdatum genutzt. Bei den Sondernotierungen <code>&lt;Datum&gt;0000-2010&lt;/Datum&gt;</code> (Entstehungsdatum vor 2010) und <code>&lt;Datum&gt;2010-9999&lt;/Datum&gt;</code> (Entstehungsdatum nach 2010) wird das vor/nach Jahr genutzt und auch hier der 1.&nbsp;Januar.</li>
+        </ul>
 
       <p id="hinweise-quotation_referror" class="hint">Belegreferenz kein Beleg</p>
 
