[[feature]] Export-Funktion für Hinweise, für die eine automatisierte Ersetzung sicher möglich ist

--- a/html/help.html
+++ b/html/help.html
@@ -510,6 +510,10 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Das Icon öffnet die Datei im Standard-XML-<b>Editor</b> des Betriebsystems.</p>
 
+      <p>In dieser Ansicht gibt es eine <b>Export-Funktion</b> für Hinweise, bei denen eine automatisierte, sichere Ersetzung möglich ist. Aufgerufen werden kann sie über das Icon <img src="../img/win/export.svg" width="30" height="30" alt="">, das rechts neben den auch in der XML-Ansicht sichtbaren <a href="#allgemeines-kopfleisteXMLHinweise">Sortier-Icons</a> steht. Exportiert wird eine JSON-Datei mit einer Hinweisliste, die aus Objekten mit selbsterklärenden Werten besteht. Ein Ersetzungsprogramm ist in <i>QS</i> nicht enthalten, muss für diese Liste also eigens geschrieben werden.</p>
+
+      <p>Es werden nur sichtbare Hinweise exportiert und solche, bei denen die Ersetzung zuverlässig funktionieren sollte. Dies trifft derzeit nur auf <a href="#hinweise-quotation_date"><i>Belegdatum korrigieren</i></a> zu.</p>
+
       <h1><span>Hinweistypen</span></h1>
 
       <p id="hinweise-typen">Die Hinweise sind so gruppiert, wie sie in der <a href="#allgemeines-filterleiste">Filterleiste</a> zu finden sind.</p>
