--- a/win.html
+++ b/win.html
@@ -99,6 +99,9 @@
         ><a href="#" id="sorting-time" class="icon" title="&lt;i&gt;Sortierung:&lt;/i&gt; nach Publikationsdatum"
           ><img src="img/win/time.svg" width="30" height="30" alt=""
         ></a
+        ><a href="#" id="hint-export" class="icon" title="angezeigte Hinweise mit der Möglichkeit zur sicheren Ersetzung exportieren"
+          ><img src="img/win/export.svg" width="30" height="30" alt=""
+        ></a
         ><span id="sorting-filter-cont"
           ><input type="text" value="" placeholder="Dateipfad-Filter" id="sorting-filter"
           ><a href="#" class="clear-text-field" title="Textfeld löschen"
