--- a/html/help.html
+++ b/html/help.html
@@ -514,7 +514,7 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p>In dieser Ansicht gibt es eine <b>Export-Funktion</b> für Hinweise, bei denen eine automatisierte, sichere Ersetzung möglich ist. Aufgerufen werden kann sie über das Icon <img src="../img/win/export.svg" width="30" height="30" alt="">, das rechts neben den auch in der XML-Ansicht sichtbaren <a href="#allgemeines-kopfleisteXMLHinweise">Sortier-Icons</a> steht. Exportiert wird eine JSON-Datei mit einer Hinweisliste, die aus Objekten mit selbsterklärenden Werten besteht. Ein Ersetzungsprogramm ist in <i>QS</i> nicht enthalten, muss für diese Liste also eigens geschrieben werden.</p>
 
-      <p>Es werden nur sichtbare Hinweise exportiert und solche, bei denen die Ersetzung zuverlässig funktionieren sollte. Dies trifft derzeit nur auf <a href="#hinweise-quotation_date"><i>Belegdatum korrigieren</i></a> zu.</p>
+      <p>Es werden nur sichtbare Hinweise exportiert und solche, bei denen die Ersetzung zuverlässig funktionieren sollte. Dies trifft derzeit nur auf <a href="#hinweise-quotation_date"><i>Belegdatum korrigieren</i></a> und <a href="#hinweise-quotcluster_helterskelter"><i>Belegreferenzen in falscher Reihenfolge</i></a> zu.</p>
 
       <h1><span>Hinweistypen</span></h1>
 
