[[change]] Die XML-Vorschau wurde technisch auf den neusten Stand gebracht und dabei leicht vereinfacht.

--- a/html/help.html
+++ b/html/help.html
@@ -461,17 +461,17 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
 
       <p>Im Kopf des Vorschaufensters gibt es mehrere Icons, die für die verschiedenen <b>Funktionen</b> des Fensters stehen:</p>
 
-      <p id="xml-vorschaufensterUpdate" class="indent-icon"><img src="../img/win/view-refresh.svg" width="30" height="30" alt="">Mit diesem Icon (oder mit dem Tastaturkürzel <kbd>F5</kbd>) können Sie die Vorschauansicht neu aufbauen. Dabei wird der XML-Code der Datei erneut von Ihrer Festplatte eingelesen und an zdl.org geschickt. Außerdem wird im Hauptfenster der App die Funktion <a href="#allgemeines-update">Update</a> angestoßen. Die Idee hinter dieser Funktion ist, dass Sie parallel das Vorschaufenster und die zugehörige XML-Datei offen haben. Nehmen Sie Änderungen an der XML-Datei vor, müssen Sie im Vorschaufenster nur noch das Update-Icon klicken und Sie sehen den Artikel in just der Fassung, an der Sie gerade arbeiten. Außerdem werden <span lang="fr">en passant</span> die Daten im Hauptfenster auf dem neusten Stand gehalten.</p>
+      <p id="xml-vorschaufensterUpdate" class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Mit diesem Icon (oder mit dem Tastaturkürzel <kbd>F5</kbd>) können Sie die Vorschauansicht neu aufbauen oder, nachdem Sie im Fenster navigiert haben, zur Vorschauansicht zurückkehren. Dabei wird der XML-Code der Datei erneut von Ihrer Festplatte eingelesen und an zdl.org geschickt. Sie bekommen also immer die aktuelle Fassung der Datei angezeigt. Außerdem wird im Hauptfenster der App die Funktion <a href="#allgemeines-update">Update</a> angestoßen. Die Idee hinter dieser Funktion ist, dass Sie parallel das Vorschaufenster und die zugehörige XML-Datei offen haben können. Nehmen Sie Änderungen an der XML-Datei vor, müssen Sie im Vorschaufenster nur noch das XML-Icon klicken und Sie sehen den Artikel in just der Fassung, an der Sie gerade arbeiten. Außerdem werden <span lang="fr">en passant</span> die Daten im Hauptfenster auf dem neusten Stand gehalten.</p>
 
-      <p class="indent-icon"><img src="../img/win/window-new.svg" width="30" height="30" alt="">Mit diesem Icon (oder dem Tastaturkürzel <kbd>Strg</kbd>&nbsp;+ <kbd>N</kbd>) können Sie dieselbe Datei in einem weiteren Vorschaufenster öffnen. Dies bietet sich immer dann an, wenn Sie <abbr title="zum Beispiel">z.&nbsp;B.</abbr> in einem Vorschaufenster den Belegtext sehen und im anderen die Belegquelle ansteuern möchten. Mit dem Icon lassen sich beliebig viele Vorschaufenster mit ein und derselben XML-Datei öffnen.</p>
+      <p class="indent-icon"><img src="../img/win/window-new.svg" width="30" height="30" alt="">Mit diesem Icon (oder mit dem Tastaturkürzel <kbd>Strg</kbd>&nbsp;+ <kbd>N</kbd>) können Sie dieselbe Datei in einem weiteren Vorschaufenster öffnen. Dies bietet sich immer dann an, wenn Sie <abbr title="zum Beispiel">z.&nbsp;B.</abbr> in einem Vorschaufenster den Belegtext sehen und im anderen die Belegquelle ansteuern möchten. Mit dem Icon lassen sich beliebig viele Vorschaufenster zu ein und derselben XML-Datei öffnen.</p>
 
       <p>Die anderen Icons dienen zur Navigation:</p>
 
-      <p class="indent-icon"><img src="../img/win/xml.svg" width="30" height="30" alt="">Mit diesem Icon (oder dem Tastaturkürzel <kbd>Alt</kbd>&nbsp;+ <kbd>Home</kbd>) kehren Sie zur XML-Datei zurück. Das Icon führt allerdings <em>kein</em> Update durch, wodurch es sich von der Funktion <img src="../img/win/view-refresh.svg" width="30" height="30" alt=""> unterscheidet.</p>
+      <p class="indent-icon"><img src="../img/win/nav-back.svg" width="30" height="30" alt="">Mit diesem Icon (oder mit dem Tastaturkürzel <kbd>Alt</kbd>&nbsp;+ <kbd>←</kbd>) navigieren Sie zur vorherigen Seite.</p>
 
-      <p class="indent-icon"><img src="../img/win/nav-back.svg" width="30" height="30" alt="">Mit diesem Icon (oder dem Tastaturkürzel <kbd>Alt</kbd>&nbsp;+ <kbd>←</kbd>) navigieren zur vorherigen Seite</p>
+      <p class="indent-icon"><img src="../img/win/nav-forward.svg" width="30" height="30" alt="">Mit diesem Icon (oder mit dem Tastaturkürzel <kbd>Alt</kbd>&nbsp;+ <kbd>→</kbd>) navigieren Sie zur nächsten Seite.</p>
 
-      <p class="indent-icon"><img src="../img/win/nav-forward.svg" width="30" height="30" alt="">Mit diesem Icon (oder dem Tastaturkürzel <kbd>Alt</kbd>&nbsp;+ <kbd>→</kbd>) navigieren zur nächsten Seite</p>
+      <p>Ist ein Icon ausgegraut, kann in die jeweilige Richtung gerade nicht navigiert werden.</p>
     </section>
 
     <!-- HINTS -->
@@ -1397,12 +1397,6 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
             <td></td>
             <td><kbd>→</kbd></td>
             <td>Navigation vorwärts</td>
-          </tr><tr>
-            <td><kbd>Alt</kbd> +</td>
-            <td></td>
-            <td></td>
-            <td><kbd>Home</kbd></td>
-            <td>Zurück zur XML-Vorschau</td>
           </tr><tr>
             <td></td>
             <td></td>
