--- a/html/pv.html
+++ b/html/pv.html
@@ -25,26 +25,20 @@
     <!-- HEADER -->
     <header>
       <div
-        ><a href="#" id="back" title="Navigation zurück&lt;br&gt;(&lt;i&gt;Tastatur:&lt;/i&gt; Alt + ←)"
+        ><a href="#" id="back"
           ><img src="../img/win/nav-back-white.svg" width="48" height="48" alt=""
         ></a
-        ><a href="#" id="xml" title="XML-Vorschau laden&lt;br&gt;(&lt;i&gt;Tastatur:&lt;/i&gt; Alt + Home)"
+        ><a href="#" id="xml"
           ><img src="../img/win/xml-white.svg" width="48" height="48" alt=""
         ></a
-        ><a href="#" id="forward" title="Navigation vorwärts&lt;br&gt;(&lt;i&gt;Tastatur:&lt;/i&gt; Alt + →)"
-          ><img src="../img/win/nav-forward-white.svg" width="48" height="48" alt=""
-        ></a
-        ><a href="#" id="update" title="XML-Update&lt;br&gt;(&lt;i&gt;Tastatur:&lt;/i&gt; F5)"
-          ><img src="../img/win/view-refresh-white.svg" width="48" height="48" alt=""
-        ></a
-        ><a href="#" id="new" title="Neues Fenster&lt;br&gt;(&lt;i&gt;Tastatur:&lt;/i&gt; Strg + N)"
+        ><a href="#" id="new"
           ><img src="../img/win/window-new-white.svg" width="48" height="48" alt=""
+        ></a
+        ><a href="#" id="forward"
+          ><img src="../img/win/nav-forward-white.svg" width="48" height="48" alt=""
         ></a
       ></div>
     </header>
-
-    <!-- WEBVIEW -->
-    <webview src="pvLoading.html"></webview>
 
     <!-- OVERLAY: LOADING -->
     <div id="loading" class="overlay"
