--- a/html/help.html
+++ b/html/help.html
@@ -6,13 +6,7 @@
 
     <title>QS / Handbuch</title>
 
-    <link rel="stylesheet" href="../css/shared/animations.css">
-    <link rel="stylesheet" href="../css/shared/form.css">
-    <link rel="stylesheet" href="../css/shared/global.css">
-    <link rel="stylesheet" href="../css/shared/overlay.css">
-    <link rel="stylesheet" href="../css/shared/variables.css">
-
-    <link rel="stylesheet" href="../css/html/help.css">
+    <link rel="stylesheet" href="../css/win/help.css">
 
     <script src="../js/shared/overlay.js"></script>
     <script src="../js/shared/popup.js"></script>
