--- a/html/pv.html
+++ b/html/pv.html
@@ -6,12 +6,7 @@
 
     <title>QS</title>
 
-    <link rel="stylesheet" href="../css/shared/animations.css">
-    <link rel="stylesheet" href="../css/shared/global.css">
-    <link rel="stylesheet" href="../css/shared/overlay.css">
-    <link rel="stylesheet" href="../css/shared/variables.css">
-
-    <link rel="stylesheet" href="../css/html/pv.css">
+    <link rel="stylesheet" href="../css/win/pv.css">
 
     <script src="../js/shared/overlay.js"></script>
     <script src="../js/shared/popup.js"></script>
