--- a/html/pvError.html
+++ b/html/pvError.html
@@ -6,10 +6,7 @@
 
     <title>QS / Fehler</title>
 
-    <link rel="stylesheet" href="../css/shared/global.css">
-    <link rel="stylesheet" href="../css/shared/variables.css">
-
-    <link rel="stylesheet" href="../css/html/pvWebview.css">
+    <link rel="stylesheet" href="../css/win/pvWebview.css">
   </head>
   <body>
     <h1>Es ist ein Fehler aufgetreten!</h1>
