--- a/html/pvLoading.html
+++ b/html/pvLoading.html
@@ -6,9 +6,7 @@
 
     <title>QS / Loading</title>
 
-    <link rel="stylesheet" href="../css/shared/animations.css">
-
-    <link rel="stylesheet" href="../css/html/pvWebview.css">
+    <link rel="stylesheet" href="../css/win/pvWebview.css">
   </head>
   <body>
     <div
