--- a/win.html
+++ b/win.html
@@ -11,19 +11,7 @@
 
     <title>QS</title>
 
-    <link rel="stylesheet" href="css/shared/animations.css">
-    <link rel="stylesheet" href="css/shared/form.css">
-    <link rel="stylesheet" href="css/shared/global.css">
-    <link rel="stylesheet" href="css/shared/overlay.css">
-    <link rel="stylesheet" href="css/shared/variables.css">
-
-    <link rel="stylesheet" href="css/win/bars.css">
-    <link rel="stylesheet" href="css/win/overlay.css">
-    <link rel="stylesheet" href="css/win/viewClusters.css">
-    <link rel="stylesheet" href="css/win/viewHints.css">
-    <link rel="stylesheet" href="css/win/viewSearch.css">
-    <link rel="stylesheet" href="css/win/viewXml.css">
-    <link rel="stylesheet" href="css/win/win.css">
+    <link rel="stylesheet" href="css/app/main.css">
 
     <script src="js/shared/dialog.js"></script>
     <script src="js/shared/overlay.js"></script>
