--- a/html/about.html
+++ b/html/about.html
@@ -6,11 +6,7 @@
 
     <title>QS / Über</title>
 
-    <link rel="stylesheet" href="../css/shared/global.css">
-    <link rel="stylesheet" href="../css/shared/overlay.css">
-    <link rel="stylesheet" href="../css/shared/variables.css">
-
-    <link rel="stylesheet" href="../css/html/about.css">
+    <link rel="stylesheet" href="../css/win/about.css">
 
     <script src="../js/shared/overlay.js"></script>
     <script src="../js/shared/popup.js"></script>
