[[change]] Für Entwickler: Startet man das Programm mit der Option --dev, können die Dev-Tools auch in der paketierten App genutzt werden.

--- a/html/help.html
+++ b/html/help.html
@@ -1526,6 +1526,10 @@ nothing added to commit but untracked files present (use "git add" to track)</pr
       <pre><b>--transform-svg=[SVG-Datei]</b></pre>
 
       <p class="indent-hint">Die übergebene SVG-Datei wird so <a href="#publikation-wortverlaufskurven">transformiert</a>, dass sie in Stil und Farbe dem Schema auf <a href="https://www.zdl.org/">zdl.org</a> entspricht. Die Ausgabedatei hat denselben Namen wie das Original, allerdings mit einem vorangestellten <code>! </code>. Sie wird im selben Ordner wie das Original abgelegt.</p>
+
+      <pre><b>--dev</b></pre>
+
+      <p class="indent-hint">Die App soll im Entwicklermodus starten. Auf diese Weise stehen die Developer-Tools auch in einer paketierten App zur Verfügung. Außerdem werden Programmfehler im Hauptprozess auf der Konsole ausgeworfen. Wenn die App nicht paketiert ist, startet sie <em>immer</em> im Entwicklermodus.</p>
     </section>
 
     <!-- PUBLICATION -->
